--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ subjects:
 - !lcsh 'Ship captains -- Fiction'
 - !lcsh 'Cape Cod (Mass.) -- Fiction'
 - !lcc 'PS'
+- GITenberg
 title: Fair Harbor
 url: http://www.gutenberg.org/ebooks/22745
